[package]
name = "pwasm-repo-bin"
version = "0.1.0"
authors = ["Alexey Frolov <frol.rage@gmail.com>"]

[dependencies]
pwasm-std = "0.3"
pwasm-abi = { git = "https://github.com/paritytech/pwasm-abi" }
pwasm-repo-contract = { path = "contract" }

[lib]
crate-type = ["cdylib"]
path = "src/repo.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
