[package]
name = "pwasm-repo-bin"
version = "0.1.0"
authors = ["Alexey Frolov <frol.rage@gmail.com>"]

[dependencies]
pwasm-ethereum = "0.6"
pwasm-abi = "0.1"
pwasm-repo-contract = { path = "contract" }

[lib]
crate-type = ["cdylib"]
path = "src/repo.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
