[package]
name = "pwasm-repo-contract"
version = "0.1.0"
authors = ["Alexey Frolov <frol.rage@gmail.com>"]

[dependencies]
pwasm-std = "0.3"
pwasm-ethereum = { git = "https://github.com/nikvolf/pwasm-ethereum" }
pwasm-abi = { git = "https://github.com/paritytech/pwasm-abi" }
pwasm-abi-derive = { git = "https://github.com/paritytech/pwasm-abi" }
pwasm-token-contract = { git = "https://github.com/paritytech/pwasm-token-example" }

[dependencies.bigint]
version = "4"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[dev-dependencies]
pwasm-test = { git = "https://github.com/paritytech/pwasm-test" }

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std"]
