[package]
name = "pwasm-repo-contract"
version = "0.1.0"
authors = ["Alexey Frolov <frol.rage@gmail.com>"]

[dependencies]
pwasm-std = "0.10"
pwasm-ethereum = "0.6"
pwasm-abi = "0.1"
pwasm-abi-derive = "0.1"
tiny-keccak = "1.3"
pwasm-token-contract = { git = "https://github.com/paritytech/pwasm-token-example" }

[dependencies.bigint]
version = "4"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[dev-dependencies]
pwasm-test = { git = "https://github.com/paritytech/pwasm-test" }

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-token-contract/std"]
